--- a/app/src/main/res/layout/activity_hud.xml
+++ b/app/src/main/res/layout/activity_hud.xml
@@ -20,25 +20,32 @@
         >
 
         <!--Badge-->
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/badge_and_name_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_alignParentTop="true"
+            android:orientation="horizontal"
+            android:background="@android:color/transparent"
             >
-            <ImageView
-                android:id="@+id/badge"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/header_height"
-                android:background="@color/colorPrimaryDark"/>
             <TextView
                 android:id="@+id/player_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/header_height"
+                android:layout_weight="2"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
+                android:gravity="center"
                 android:text="@{player.playerName}"/>
-        </RelativeLayout>
+            <ImageView
+                android:id="@+id/badge_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/header_height"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="@drawable/flag_usa"/>
+
+        </LinearLayout>
 
         <FrameLayout
             android:id="@+id/anchor_point"
