--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -15,8 +15,8 @@
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/background_music_switch"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/width_settings_component"
+            android:layout_height="@dimen/height_settings_component"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="60dp"
             android:text="@string/backgroundMusic"
@@ -26,8 +26,8 @@
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/sound_effects_switch"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/width_settings_component"
+            android:layout_height="@dimen/height_settings_component"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/background_music_switch"
             android:layout_marginTop="20dp"
@@ -36,35 +36,84 @@
             android:textSize="20sp"/>
 
 
-        <Spinner
-            android:id="@+id/language_spinner"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/language_ll"
+            android:layout_width="@dimen/width_settings_component"
+            android:layout_height="@dimen/height_settings_component"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/sound_effects_switch"
             android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/Language_label"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="@string/select_language"
+                android:gravity="center"
+                android:textSize="@dimen/text_size"
+                />
+            <ImageButton
+                android:id="@+id/language_image_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:src="@drawable/flag_usa"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:background="@color/white"
+                android:padding="10dp"
 
-            />
+                />
 
-        <Spinner
-            android:id="@+id/badge_spinner"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/badge_ll"
+            android:layout_width="@dimen/width_settings_component"
+            android:layout_height="@dimen/height_settings_component"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/language_spinner"
+            android:layout_below="@+id/language_ll"
             android:layout_marginTop="20dp"
-            />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/flag_label"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="@string/select_flag"
+                android:gravity="center"
+                android:textSize="@dimen/text_size"
+                />
+            <ImageButton
+                android:id="@+id/flag_image_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:src="@drawable/flag_usa"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:background="@color/white"
+                android:padding="10dp"
+
+                />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <Button
             android:id="@+id/about_button"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/badge_spinner"
+            android:layout_below="@+id/badge_ll"
             android:layout_marginTop="20dp"
-
             android:text="@string/about"
             />
+
+
 
 
     </RelativeLayout>
