--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,9 @@
     <dimen name="menu_button_height">100dp</dimen>
     <dimen name="menu_button_width">100dp</dimen>
 
+    <!--Settings menu-->
+    <dimen name="width_settings_component">300dp</dimen>
+    <dimen name="height_settings_component">50dp</dimen>
+    <dimen name="text_size">20dp</dimen>
+
 </resources>
