--- a/app/src/main/res/layout/fragment_fleet.xml
+++ b/app/src/main/res/layout/fragment_fleet.xml
@@ -8,11 +8,12 @@
 
 
     <RelativeLayout
+        android:id="@+id/fleet_fragment_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
         <!-- Save button -->
-        <!--android:onClick="saveFleet"-->
+
         <Button
             android:id="@+id/save_button"
             android:layout_width="wrap_content"
@@ -25,13 +26,13 @@
 
 
         <!-- Grid -->
-        <ImageView
+        <SurfaceView
             android:id="@+id/grid"
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/letters"
-            android:background="@color/colorAccent"
+            android:background="@color/white"
             />
 
         <ImageView
