--- a/app/src/main/res/layout/fragment_fleet.xml
+++ b/app/src/main/res/layout/fragment_fleet.xml
@@ -18,7 +18,7 @@
             android:id="@+id/save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/grid"
+            android:layout_below="@+id/battle_field"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:text="@string/saveFleet"
@@ -26,8 +26,8 @@
 
 
         <!-- Grid -->
-        <SurfaceView
-            android:id="@+id/grid"
+        <com.edomar.battleship.BattleField
+            android:id="@+id/battle_field"
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:layout_centerHorizontal="true"
@@ -46,7 +46,7 @@
             android:id="@+id/numbers"
             android:layout_width="30dp"
             android:layout_height="300dp"
-            android:layout_toLeftOf="@+id/grid"
+            android:layout_toLeftOf="@+id/battle_field"
             android:layout_below="@+id/letters"/>
     </RelativeLayout>
 
