--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/badge_and_name_view"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:layout_alignParentTop="true"
+    android:orientation="horizontal"
+    android:background="@android:color/transparent">
 
-</RelativeLayout>
+
+        <TextView
+            android:id="@+id/player_name"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/header_height"
+            android:layout_weight="2"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="@{player.playerName}"/>
+        <ImageView
+            android:id="@+id/badge_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/header_height"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/flag_usa"/>
+
+
+
+</LinearLayout>
