--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,7 +12,11 @@
     <dimen name="width_settings_component">300dp</dimen>
     <dimen name="height_settings_component">50dp</dimen>
     <dimen name="text_size">20dp</dimen>
-
+    <dimen name="text_size_hurry">30dp</dimen>
+    <dimen name="battlefield_size">300dp</dimen>
+    <dimen name="block_size">30dp</dimen>
+    <dimen name="info_match_menu_height">50dp</dimen>
+    <dimen name="distance">30dp</dimen>
 
 
 </resources>
