--- a/app/src/main/res/layout/fragment_match2.xml
+++ b/app/src/main/res/layout/fragment_match2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fl1"
+    android:id="@+id/fl2"
     android:layout_width="match_parent" android:layout_height="match_parent"
 
     >
@@ -42,7 +42,7 @@
             android:layout_width="@dimen/battlefield_size"
             android:layout_height="@dimen/battlefield_size"
             android:layout_centerInParent="true"
-            android:background="@android:color/holo_green_dark"
+            android:background="@android:color/holo_blue_bright"
             />
 
         <ImageView
