Secondo versione di isolamento: la classe IBattleField implementa tutti i metodi comuni a tutti i BattleFields mentre BattleField contiene solo il metodo onTouchListener in quanto il computer non ne avrà bisogno

--- a/app/src/main/res/layout/fragment_fleet.xml
+++ b/app/src/main/res/layout/fragment_fleet.xml
@@ -26,7 +26,7 @@
 
 
         <!-- Grid -->
-        <com.edomar.battleship.BattleField
+        <com.edomar.battleship.battlefield.BattleField
             android:id="@+id/battle_field"
             android:layout_width="@dimen/battlefield_size"
             android:layout_height="@dimen/battlefield_size"
