--- a/app/src/main/res/layout/fragment_match2.xml
+++ b/app/src/main/res/layout/fragment_match2.xml
@@ -37,7 +37,7 @@
         </LinearLayout>
 
 
-        <com.edomar.battleship.BattleField
+        <com.edomar.battleship.battlefield.BattleField
             android:id="@+id/battle_field"
             android:layout_width="@dimen/battlefield_size"
             android:layout_height="@dimen/battlefield_size"
