Primo passo verso il gamplay. Impostata animazione in MainMenuFragment, la ScenarioActivity avvia una Gameactivity con il giusto livello da far visulizzare

--- a/app/src/main/res/layout/fragment_fleet_configuration_pre_match.xml
+++ b/app/src/main/res/layout/fragment_fleet_configuration_pre_match.xml
@@ -35,7 +35,7 @@
 
 
     <!-- Temporary -->
-    <com.edomar.battleship.battlefield.BattleField
+    <com.edomar.battleship.battlefield.BattleFieldFleetFragment
         android:id="@+id/battle_field"
         android:layout_width="@dimen/battlefield_size"
         android:layout_height="@dimen/battlefield_size"
