1vs1 completato, rimane da fare il ceck sulla flotta nel prepartita e autopoizionamento

--- a/app/src/main/res/layout/fragment_fleet.xml
+++ b/app/src/main/res/layout/fragment_fleet.xml
@@ -18,7 +18,7 @@
 
 
         <!-- Grid -->
-        <com.edomar.battleship.battlefield.BattleFieldFleetFragment
+        <com.edomar.battleship.battlefield.BattleFieldInteractive
             android:id="@+id/battle_field"
             android:layout_width="@dimen/battlefield_size"
             android:layout_height="@dimen/battlefield_size"
